fixed  back to top button on mobile

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ footer {
   border: #74040f solid;
   height: 50px;
   width: 50px;
-  font-size: xx-large;
+  font-size: large;
   margin: 0 0 7px 0;
 }
 
